Project 3/parser.output
Grammar

    0 $accept: Classes $end

    1 Classes: Classes Class
    2        | /* empty */

    3 Class: T_IDENTIFIER Copt T_OPENBRACKET Cbody T_CLOSEBRACKET

    4 Copt: T_EXTENDS T_IDENTIFIER
    5     | /* empty */

    6 Cbody: Members Methods

    7 Members: Members Member
    8        | /* empty */

    9 Member: Type T_IDENTIFIER

   10 Type: KEY_BOOLEAN
   11     | KEY_INTEGER
   12     | T_IDENTIFIER
   13     | T_NONE

   14 Methods: Method Methods
   15        | /* empty */

   16 Method: T_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Type T_OPENBRACKET Mbody T_CLOSEBRACKET

   17 Parameters: Parameter

   18 Parameter: Parameter T_COMMA T_IDENTIFIER T_COLON Type
   19          | T_IDENTIFIER T_COLON Type
   20          | /* empty */

   21 Mbody: Declarations Statements Mreturn

   22 Declarations: Declarations Declaration
   23             | /* empty */

   24 Declaration: Type Identifiers

   25 Identifiers: T_IDENTIFIER T_COMMA Identifiers
   26            | T_IDENTIFIER

   27 Statements: Statement Statements
   28           | /* empty */

   29 Statement: Assigments
   30          | Mcalls
   31          | IfElses
   32          | Whiles
   33          | Prints

   34 Assigments: T_IDENTIFIER T_EQUAL Expression
   35           | T_IDENTIFIER T_DOT T_IDENTIFIER T_EQUAL Expression

   36 Mcalls: T_IDENTIFIER T_OPENPAREN Arg T_CLOSEPAREN
   37       | T_IDENTIFIER T_DOT T_IDENTIFIER T_OPENPAREN Arg T_CLOSEPAREN

   38 Arg: Arg T_COMMA Expression
   39    | Expression
   40    | /* empty */

   41 IfElses: T_IF Expression T_OPENBRACKET Block T_CLOSEBRACKET
   42        | T_IF Expression T_OPENBRACKET Block T_CLOSEBRACKET T_ELSE T_OPENBRACKET Block T_CLOSEBRACKET

   43 Whiles: T_WHILE Expression T_OPENBRACKET Block T_CLOSEBRACKET

   44 Block: Statement Statements

   45 Prints: T_PRINT Expression

   46 Expression: Expression T_PLUS Expression
   47           | Expression T_MINUS Expression
   48           | Expression T_MULTIPLY Expression
   49           | Expression T_DIVIDE Expression
   50           | Expression T_LESS Expression
   51           | Expression T_LESSOREQL Expression
   52           | Expression T_EQUALS Expression
   53           | Expression T_AND Expression
   54           | Expression T_OR Expression
   55           | T_NOT Expression
   56           | T_MINUS Expression
   57           | T_IDENTIFIER
   58           | T_IDENTIFIER T_DOT T_IDENTIFIER
   59           | Mcalls
   60           | T_OPENPAREN Expression T_CLOSEPAREN
   61           | T_NUMBER
   62           | T_BOOLEAN
   63           | T_NEW T_IDENTIFIER
   64           | T_NEW T_IDENTIFIER T_OPENPAREN Arg T_CLOSEPAREN

   65 Mreturn: T_RETURN Expression
   66        | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
T_OPENPAREN (258) 16 36 37 60 64
T_CLOSEPAREN (259) 16 36 37 60 64
T_OPENBRACKET (260) 3 16 41 42 43
T_CLOSEBRACKET (261) 3 16 41 42 43
T_COMMA (262) 18 25 38
T_COLON (263) 18 19
T_DOT (264) 35 37 58
T_PLUS (265) 46
T_MINUS (266) 47 56
T_MULTIPLY (267) 48
T_DIVIDE (268) 49
T_LESS (269) 50
T_LESSOREQL (270) 51
T_EQUAL (271) 34 35
T_AND (272) 53
T_OR (273) 54
T_NOT (274) 55
T_EQUALS (275) 52
T_ARROW (276) 16
T_NEW (277) 63 64
T_EXTENDS (278) 4
T_BOOLEAN (279) 62
T_NUMBER (280) 61
T_IDENTIFIER (281) 3 4 9 12 16 18 19 25 26 34 35 36 37 57 58 63 64
T_IF (282) 41 42
T_ELSE (283) 42
T_WHILE (284) 43
T_PRINT (285) 45
T_RETURN (286) 65
KEY_INTEGER (287) 11
KEY_BOOLEAN (288) 10
T_NONE (289) 13


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
Classes (36)
    on left: 1 2, on right: 0 1
Class (37)
    on left: 3, on right: 1
Copt (38)
    on left: 4 5, on right: 3
Cbody (39)
    on left: 6, on right: 3
Members (40)
    on left: 7 8, on right: 6 7
Member (41)
    on left: 9, on right: 7
Type (42)
    on left: 10 11 12 13, on right: 9 16 18 19 24
Methods (43)
    on left: 14 15, on right: 6 14
Method (44)
    on left: 16, on right: 14
Parameters (45)
    on left: 17, on right: 16
Parameter (46)
    on left: 18 19 20, on right: 17 18
Mbody (47)
    on left: 21, on right: 16
Declarations (48)
    on left: 22 23, on right: 21 22
Declaration (49)
    on left: 24, on right: 22
Identifiers (50)
    on left: 25 26, on right: 24 25
Statements (51)
    on left: 27 28, on right: 21 27 44
Statement (52)
    on left: 29 30 31 32 33, on right: 27 44
Assigments (53)
    on left: 34 35, on right: 29
Mcalls (54)
    on left: 36 37, on right: 30 59
Arg (55)
    on left: 38 39 40, on right: 36 37 38 64
IfElses (56)
    on left: 41 42, on right: 31
Whiles (57)
    on left: 43, on right: 32
Block (58)
    on left: 44, on right: 41 42 43
Prints (59)
    on left: 45, on right: 33
Expression (60)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64, on right: 34 35 38 39 41 42 43 45 46 47 48 49 50 51 52 53 54
    55 56 60 65
Mreturn (61)
    on left: 65 66, on right: 21


State 0

    0 $accept: . Classes $end

    $default  reduce using rule 2 (Classes)

    Classes  go to state 1


State 1

    0 $accept: Classes . $end
    1 Classes: Classes . Class

    $end          shift, and go to state 2
    T_IDENTIFIER  shift, and go to state 3

    Class  go to state 4


State 2

    0 $accept: Classes $end .

    $default  accept


State 3

    3 Class: T_IDENTIFIER . Copt T_OPENBRACKET Cbody T_CLOSEBRACKET

    T_EXTENDS  shift, and go to state 5

    $default  reduce using rule 5 (Copt)

    Copt  go to state 6


State 4

    1 Classes: Classes Class .

    $default  reduce using rule 1 (Classes)


State 5

    4 Copt: T_EXTENDS . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 7


State 6

    3 Class: T_IDENTIFIER Copt . T_OPENBRACKET Cbody T_CLOSEBRACKET

    T_OPENBRACKET  shift, and go to state 8


State 7

    4 Copt: T_EXTENDS T_IDENTIFIER .

    $default  reduce using rule 4 (Copt)


State 8

    3 Class: T_IDENTIFIER Copt T_OPENBRACKET . Cbody T_CLOSEBRACKET

    $default  reduce using rule 8 (Members)

    Cbody    go to state 9
    Members  go to state 10


State 9

    3 Class: T_IDENTIFIER Copt T_OPENBRACKET Cbody . T_CLOSEBRACKET

    T_CLOSEBRACKET  shift, and go to state 11


State 10

    6 Cbody: Members . Methods
    7 Members: Members . Member

    T_IDENTIFIER  shift, and go to state 12
    KEY_INTEGER   shift, and go to state 13
    KEY_BOOLEAN   shift, and go to state 14
    T_NONE        shift, and go to state 15

    $default  reduce using rule 15 (Methods)

    Member   go to state 16
    Type     go to state 17
    Methods  go to state 18
    Method   go to state 19


State 11

    3 Class: T_IDENTIFIER Copt T_OPENBRACKET Cbody T_CLOSEBRACKET .

    $default  reduce using rule 3 (Class)


State 12

   12 Type: T_IDENTIFIER .
   16 Method: T_IDENTIFIER . T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Type T_OPENBRACKET Mbody T_CLOSEBRACKET

    T_OPENPAREN  shift, and go to state 20

    $default  reduce using rule 12 (Type)


State 13

   11 Type: KEY_INTEGER .

    $default  reduce using rule 11 (Type)


State 14

   10 Type: KEY_BOOLEAN .

    $default  reduce using rule 10 (Type)


State 15

   13 Type: T_NONE .

    $default  reduce using rule 13 (Type)


State 16

    7 Members: Members Member .

    $default  reduce using rule 7 (Members)


State 17

    9 Member: Type . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 21


State 18

    6 Cbody: Members Methods .

    $default  reduce using rule 6 (Cbody)


State 19

   14 Methods: Method . Methods

    T_IDENTIFIER  shift, and go to state 22

    $default  reduce using rule 15 (Methods)

    Methods  go to state 23
    Method   go to state 19


State 20

   16 Method: T_IDENTIFIER T_OPENPAREN . Parameters T_CLOSEPAREN T_ARROW Type T_OPENBRACKET Mbody T_CLOSEBRACKET

    T_IDENTIFIER  shift, and go to state 24

    $default  reduce using rule 20 (Parameter)

    Parameters  go to state 25
    Parameter   go to state 26


State 21

    9 Member: Type T_IDENTIFIER .

    $default  reduce using rule 9 (Member)


State 22

   16 Method: T_IDENTIFIER . T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Type T_OPENBRACKET Mbody T_CLOSEBRACKET

    T_OPENPAREN  shift, and go to state 20


State 23

   14 Methods: Method Methods .

    $default  reduce using rule 14 (Methods)


State 24

   19 Parameter: T_IDENTIFIER . T_COLON Type

    T_COLON  shift, and go to state 27


State 25

   16 Method: T_IDENTIFIER T_OPENPAREN Parameters . T_CLOSEPAREN T_ARROW Type T_OPENBRACKET Mbody T_CLOSEBRACKET

    T_CLOSEPAREN  shift, and go to state 28


State 26

   17 Parameters: Parameter .
   18 Parameter: Parameter . T_COMMA T_IDENTIFIER T_COLON Type

    T_COMMA  shift, and go to state 29

    $default  reduce using rule 17 (Parameters)


State 27

   19 Parameter: T_IDENTIFIER T_COLON . Type

    T_IDENTIFIER  shift, and go to state 30
    KEY_INTEGER   shift, and go to state 13
    KEY_BOOLEAN   shift, and go to state 14
    T_NONE        shift, and go to state 15

    Type  go to state 31


State 28

   16 Method: T_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN . T_ARROW Type T_OPENBRACKET Mbody T_CLOSEBRACKET

    T_ARROW  shift, and go to state 32


State 29

   18 Parameter: Parameter T_COMMA . T_IDENTIFIER T_COLON Type

    T_IDENTIFIER  shift, and go to state 33


State 30

   12 Type: T_IDENTIFIER .

    $default  reduce using rule 12 (Type)


State 31

   19 Parameter: T_IDENTIFIER T_COLON Type .

    $default  reduce using rule 19 (Parameter)


State 32

   16 Method: T_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW . Type T_OPENBRACKET Mbody T_CLOSEBRACKET

    T_IDENTIFIER  shift, and go to state 30
    KEY_INTEGER   shift, and go to state 13
    KEY_BOOLEAN   shift, and go to state 14
    T_NONE        shift, and go to state 15

    Type  go to state 34


State 33

   18 Parameter: Parameter T_COMMA T_IDENTIFIER . T_COLON Type

    T_COLON  shift, and go to state 35


State 34

   16 Method: T_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Type . T_OPENBRACKET Mbody T_CLOSEBRACKET

    T_OPENBRACKET  shift, and go to state 36


State 35

   18 Parameter: Parameter T_COMMA T_IDENTIFIER T_COLON . Type

    T_IDENTIFIER  shift, and go to state 30
    KEY_INTEGER   shift, and go to state 13
    KEY_BOOLEAN   shift, and go to state 14
    T_NONE        shift, and go to state 15

    Type  go to state 37


State 36

   16 Method: T_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Type T_OPENBRACKET . Mbody T_CLOSEBRACKET

    $default  reduce using rule 23 (Declarations)

    Mbody         go to state 38
    Declarations  go to state 39


State 37

   18 Parameter: Parameter T_COMMA T_IDENTIFIER T_COLON Type .

    $default  reduce using rule 18 (Parameter)


State 38

   16 Method: T_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Type T_OPENBRACKET Mbody . T_CLOSEBRACKET

    T_CLOSEBRACKET  shift, and go to state 40


State 39

   21 Mbody: Declarations . Statements Mreturn
   22 Declarations: Declarations . Declaration

    T_IDENTIFIER  shift, and go to state 41
    T_IF          shift, and go to state 42
    T_WHILE       shift, and go to state 43
    T_PRINT       shift, and go to state 44
    KEY_INTEGER   shift, and go to state 13
    KEY_BOOLEAN   shift, and go to state 14
    T_NONE        shift, and go to state 15

    $default  reduce using rule 28 (Statements)

    Type         go to state 45
    Declaration  go to state 46
    Statements   go to state 47
    Statement    go to state 48
    Assigments   go to state 49
    Mcalls       go to state 50
    IfElses      go to state 51
    Whiles       go to state 52
    Prints       go to state 53


State 40

   16 Method: T_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Type T_OPENBRACKET Mbody T_CLOSEBRACKET .

    $default  reduce using rule 16 (Method)


State 41

   12 Type: T_IDENTIFIER .
   34 Assigments: T_IDENTIFIER . T_EQUAL Expression
   35           | T_IDENTIFIER . T_DOT T_IDENTIFIER T_EQUAL Expression
   36 Mcalls: T_IDENTIFIER . T_OPENPAREN Arg T_CLOSEPAREN
   37       | T_IDENTIFIER . T_DOT T_IDENTIFIER T_OPENPAREN Arg T_CLOSEPAREN

    T_OPENPAREN  shift, and go to state 54
    T_DOT        shift, and go to state 55
    T_EQUAL      shift, and go to state 56

    $default  reduce using rule 12 (Type)


State 42

   41 IfElses: T_IF . Expression T_OPENBRACKET Block T_CLOSEBRACKET
   42        | T_IF . Expression T_OPENBRACKET Block T_CLOSEBRACKET T_ELSE T_OPENBRACKET Block T_CLOSEBRACKET

    T_OPENPAREN   shift, and go to state 57
    T_MINUS       shift, and go to state 58
    T_NOT         shift, and go to state 59
    T_NEW         shift, and go to state 60
    T_BOOLEAN     shift, and go to state 61
    T_NUMBER      shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63

    Mcalls      go to state 64
    Expression  go to state 65


State 43

   43 Whiles: T_WHILE . Expression T_OPENBRACKET Block T_CLOSEBRACKET

    T_OPENPAREN   shift, and go to state 57
    T_MINUS       shift, and go to state 58
    T_NOT         shift, and go to state 59
    T_NEW         shift, and go to state 60
    T_BOOLEAN     shift, and go to state 61
    T_NUMBER      shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63

    Mcalls      go to state 64
    Expression  go to state 66


State 44

   45 Prints: T_PRINT . Expression

    T_OPENPAREN   shift, and go to state 57
    T_MINUS       shift, and go to state 58
    T_NOT         shift, and go to state 59
    T_NEW         shift, and go to state 60
    T_BOOLEAN     shift, and go to state 61
    T_NUMBER      shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63

    Mcalls      go to state 64
    Expression  go to state 67


State 45

   24 Declaration: Type . Identifiers

    T_IDENTIFIER  shift, and go to state 68

    Identifiers  go to state 69


State 46

   22 Declarations: Declarations Declaration .

    $default  reduce using rule 22 (Declarations)


State 47

   21 Mbody: Declarations Statements . Mreturn

    T_RETURN  shift, and go to state 70

    $default  reduce using rule 66 (Mreturn)

    Mreturn  go to state 71


State 48

   27 Statements: Statement . Statements

    T_IDENTIFIER  shift, and go to state 72
    T_IF          shift, and go to state 42
    T_WHILE       shift, and go to state 43
    T_PRINT       shift, and go to state 44

    $default  reduce using rule 28 (Statements)

    Statements  go to state 73
    Statement   go to state 48
    Assigments  go to state 49
    Mcalls      go to state 50
    IfElses     go to state 51
    Whiles      go to state 52
    Prints      go to state 53


State 49

   29 Statement: Assigments .

    $default  reduce using rule 29 (Statement)


State 50

   30 Statement: Mcalls .

    $default  reduce using rule 30 (Statement)


State 51

   31 Statement: IfElses .

    $default  reduce using rule 31 (Statement)


State 52

   32 Statement: Whiles .

    $default  reduce using rule 32 (Statement)


State 53

   33 Statement: Prints .

    $default  reduce using rule 33 (Statement)


State 54

   36 Mcalls: T_IDENTIFIER T_OPENPAREN . Arg T_CLOSEPAREN

    T_OPENPAREN   shift, and go to state 57
    T_MINUS       shift, and go to state 58
    T_NOT         shift, and go to state 59
    T_NEW         shift, and go to state 60
    T_BOOLEAN     shift, and go to state 61
    T_NUMBER      shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63

    $default  reduce using rule 40 (Arg)

    Mcalls      go to state 64
    Arg         go to state 74
    Expression  go to state 75


State 55

   35 Assigments: T_IDENTIFIER T_DOT . T_IDENTIFIER T_EQUAL Expression
   37 Mcalls: T_IDENTIFIER T_DOT . T_IDENTIFIER T_OPENPAREN Arg T_CLOSEPAREN

    T_IDENTIFIER  shift, and go to state 76


State 56

   34 Assigments: T_IDENTIFIER T_EQUAL . Expression

    T_OPENPAREN   shift, and go to state 57
    T_MINUS       shift, and go to state 58
    T_NOT         shift, and go to state 59
    T_NEW         shift, and go to state 60
    T_BOOLEAN     shift, and go to state 61
    T_NUMBER      shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63

    Mcalls      go to state 64
    Expression  go to state 77


State 57

   60 Expression: T_OPENPAREN . Expression T_CLOSEPAREN

    T_OPENPAREN   shift, and go to state 57
    T_MINUS       shift, and go to state 58
    T_NOT         shift, and go to state 59
    T_NEW         shift, and go to state 60
    T_BOOLEAN     shift, and go to state 61
    T_NUMBER      shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63

    Mcalls      go to state 64
    Expression  go to state 78


State 58

   56 Expression: T_MINUS . Expression

    T_OPENPAREN   shift, and go to state 57
    T_MINUS       shift, and go to state 58
    T_NOT         shift, and go to state 59
    T_NEW         shift, and go to state 60
    T_BOOLEAN     shift, and go to state 61
    T_NUMBER      shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63

    Mcalls      go to state 64
    Expression  go to state 79


State 59

   55 Expression: T_NOT . Expression

    T_OPENPAREN   shift, and go to state 57
    T_MINUS       shift, and go to state 58
    T_NOT         shift, and go to state 59
    T_NEW         shift, and go to state 60
    T_BOOLEAN     shift, and go to state 61
    T_NUMBER      shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63

    Mcalls      go to state 64
    Expression  go to state 80


State 60

   63 Expression: T_NEW . T_IDENTIFIER
   64           | T_NEW . T_IDENTIFIER T_OPENPAREN Arg T_CLOSEPAREN

    T_IDENTIFIER  shift, and go to state 81


State 61

   62 Expression: T_BOOLEAN .

    $default  reduce using rule 62 (Expression)


State 62

   61 Expression: T_NUMBER .

    $default  reduce using rule 61 (Expression)


State 63

   36 Mcalls: T_IDENTIFIER . T_OPENPAREN Arg T_CLOSEPAREN
   37       | T_IDENTIFIER . T_DOT T_IDENTIFIER T_OPENPAREN Arg T_CLOSEPAREN
   57 Expression: T_IDENTIFIER .
   58           | T_IDENTIFIER . T_DOT T_IDENTIFIER

    T_OPENPAREN  shift, and go to state 54
    T_DOT        shift, and go to state 82

    $default  reduce using rule 57 (Expression)


State 64

   59 Expression: Mcalls .

    $default  reduce using rule 59 (Expression)


State 65

   41 IfElses: T_IF Expression . T_OPENBRACKET Block T_CLOSEBRACKET
   42        | T_IF Expression . T_OPENBRACKET Block T_CLOSEBRACKET T_ELSE T_OPENBRACKET Block T_CLOSEBRACKET
   46 Expression: Expression . T_PLUS Expression
   47           | Expression . T_MINUS Expression
   48           | Expression . T_MULTIPLY Expression
   49           | Expression . T_DIVIDE Expression
   50           | Expression . T_LESS Expression
   51           | Expression . T_LESSOREQL Expression
   52           | Expression . T_EQUALS Expression
   53           | Expression . T_AND Expression
   54           | Expression . T_OR Expression

    T_OPENBRACKET  shift, and go to state 83
    T_PLUS         shift, and go to state 84
    T_MINUS        shift, and go to state 85
    T_MULTIPLY     shift, and go to state 86
    T_DIVIDE       shift, and go to state 87
    T_LESS         shift, and go to state 88
    T_LESSOREQL    shift, and go to state 89
    T_AND          shift, and go to state 90
    T_OR           shift, and go to state 91
    T_EQUALS       shift, and go to state 92


State 66

   43 Whiles: T_WHILE Expression . T_OPENBRACKET Block T_CLOSEBRACKET
   46 Expression: Expression . T_PLUS Expression
   47           | Expression . T_MINUS Expression
   48           | Expression . T_MULTIPLY Expression
   49           | Expression . T_DIVIDE Expression
   50           | Expression . T_LESS Expression
   51           | Expression . T_LESSOREQL Expression
   52           | Expression . T_EQUALS Expression
   53           | Expression . T_AND Expression
   54           | Expression . T_OR Expression

    T_OPENBRACKET  shift, and go to state 93
    T_PLUS         shift, and go to state 84
    T_MINUS        shift, and go to state 85
    T_MULTIPLY     shift, and go to state 86
    T_DIVIDE       shift, and go to state 87
    T_LESS         shift, and go to state 88
    T_LESSOREQL    shift, and go to state 89
    T_AND          shift, and go to state 90
    T_OR           shift, and go to state 91
    T_EQUALS       shift, and go to state 92


State 67

   45 Prints: T_PRINT Expression .
   46 Expression: Expression . T_PLUS Expression
   47           | Expression . T_MINUS Expression
   48           | Expression . T_MULTIPLY Expression
   49           | Expression . T_DIVIDE Expression
   50           | Expression . T_LESS Expression
   51           | Expression . T_LESSOREQL Expression
   52           | Expression . T_EQUALS Expression
   53           | Expression . T_AND Expression
   54           | Expression . T_OR Expression

    T_PLUS       shift, and go to state 84
    T_MINUS      shift, and go to state 85
    T_MULTIPLY   shift, and go to state 86
    T_DIVIDE     shift, and go to state 87
    T_LESS       shift, and go to state 88
    T_LESSOREQL  shift, and go to state 89
    T_AND        shift, and go to state 90
    T_OR         shift, and go to state 91
    T_EQUALS     shift, and go to state 92

    $default  reduce using rule 45 (Prints)


State 68

   25 Identifiers: T_IDENTIFIER . T_COMMA Identifiers
   26            | T_IDENTIFIER .

    T_COMMA  shift, and go to state 94

    $default  reduce using rule 26 (Identifiers)


State 69

   24 Declaration: Type Identifiers .

    $default  reduce using rule 24 (Declaration)


State 70

   65 Mreturn: T_RETURN . Expression

    T_OPENPAREN   shift, and go to state 57
    T_MINUS       shift, and go to state 58
    T_NOT         shift, and go to state 59
    T_NEW         shift, and go to state 60
    T_BOOLEAN     shift, and go to state 61
    T_NUMBER      shift, and go to state 62
    T_IDENTIFIER  shift, and go to state 63

    Mcalls      go to state 64
    Expression  go to state 95


State 71

   21 Mbody: Declarations Statements Mreturn .

    $default  reduce using rule 21 (Mbody)


State 72

   34 Assigments: T_IDENTIFIER . T_EQUAL Expression
   35           | T_IDENTIFIER . T_DOT T_IDENTIFIER T_EQUAL Expression
   36 Mcalls: T_IDENTIFIER . T_OPENPAREN Arg T_CLOSEPAREN
   37       | T_IDENTIFIER . T_DOT T_IDENTIFIER T_OPENPAREN Arg T_CLOSEPAREN

    T_OPENPAREN  shift, and go to state 54
    T_DOT        shift, and go to state 55
    T_EQUAL      shift, and go to state 56


State 73

   27 Statements: Statement Statements .

    $default  reduce using rule 27 (Statements)


State 74

   36 Mcalls: T_IDENTIFIER T_OPENPAREN Arg . T_CLOSEPAREN
   38 Arg: Arg . T_COMMA Expression

    T_CLOSEPAREN  shift, and go to state 96
    T_COMMA       shift, and go to state 97


State 75

   39 Arg: Expression .
   46 Expression: Expression . T_PLUS Expression
   47           | Expression . T_MINUS Expression
   48           | Expression . T_MULTIPLY Expression
   49           | Expression . T_DIVIDE Expression
   50           | Expression . T_LESS Expression
   51           | Expression . T_LESSOREQL Expression
   52           | Expression . T_EQUALS Expression
   53           | Expression . T_AND Expression
   54           | Expression . T_OR Expression

    T_PLUS       shift, and go to state 84
    T_MINUS      shift, and go to state 85
    T_MULTIPLY   shift, and go to state 86
    T_DIVIDE     shift, and go to state 87
    T_LESS       shift, and go to state 88
    T_LESSOREQL  shift, and go to state 89
    T_AND        shift, and go to state 90
    T_OR         shift, and go to state 91
    T_EQUALS     shift, and go to state 92

    $default  reduce using rule 39 (Arg)


State 76

   35 Assigments: T_IDENTIFIER T_DOT T_IDENTIFIER . T_EQUAL Expression
   37 Mcalls: T_IDENTIFIER T_DOT T_IDENTIFIER . T_OPENPAREN Arg T_CLOSEPAREN

    T_OPENPAREN  shift, and go to state 98
    T_EQUAL      shift, and go to state 99


State 77

   34 Assigments: T_IDENTIFIER T_EQUAL Expression .
   46 Expression: Expression . T_PLUS Expression
   47           | Expression . T_MINUS Expression
   48           | Expression . T_MULTIPLY Expression
   49           | Expression . T_DIVIDE Expression
   50           | Expression . T_LESS Expression
   51           | Expression . T_LESSOREQL Expression
   52           | Expression . T_EQUALS Expression
   53           | Expression . T_AND Expression
   54           | Expression . T_OR Expression

    T_PLUS       shift, and go to state 84
    T_MINUS      shift, and go to state 85
    T_MULTIPLY   shift, and go to state 86
    T_DIVIDE     shift, and go to state 87
    T_LESS       shift, and go to state 88
    T_LESSOREQL  shift, and go to state 89
    T_AND        shift, and go to state 90
    T_OR         shift, and go to state 91
    T_EQUALS     shift, and go to state 92

    $default  reduce using rule 34 (Assigments)


State 78

   46 Expression: Expression . T_PLUS Expression
   47           | Expression . T_MINUS Expression
   48           | Expression . T_MULTIPLY Expression
   49           | Expression . T_DIVIDE Expression
   50           | Expression . T_LESS Expression
   51           | Expression . T_LESSOREQL Expression
   52           | Expression . T_EQUALS Expression
   53           | Expression . T_AND Expression
   54           | Expression . T_OR Expression
   60           | T_OPENPAREN Expression . T_CLOSEPAREN

    T_CLOSEPAREN  shift, and go to state 100
    T_PLUS        shift, and go to state 84
    T_MINUS       shift, and go to state 85
    T_MULTIPLY    shift, and go to state 86
    T_DIVIDE      shift, and go to state 87
    T_LESS        shift, and go to state 88
    T_LESSOREQL   shift, and go to state 89
    T_AND         shift, and go to state 90
    T_OR          shift, and go to state 91
    T_EQUALS      shift, and go to state 92


State 79

   46 Expression: Expression . T_PLUS Expression
   47           | Expression . T_MINUS Expression
   48           | Expression . T_MULTIPLY Expression
   49           | Expression . T_DIVIDE Expression
   50           | Expression . T_LESS Expression
   51           | Expression . T_LESSOREQL Expression
   52           | Expression . T_EQUALS Expression
   53           | Expression . T_AND Expression
   54           | Expression . T_OR Expression
   56           | T_MINUS Expression .

    $default  reduce using rule 56 (Expression)


State 80

   46 Expression: Expression . T_PLUS Expression
   47           | Expression . T_MINUS Expression
   48           | Expression . T_MULTIPLY Expression
   49           | Expression . T_DIVIDE Expression
   50           | Expression . T_LESS Expression
   51           | Expression . T_LESSOREQL Expression
   52           | Expression . T_EQUALS Expression
   53           | Expression . T_AND Expression
   54           | Expression . T_OR Expression
   55           | T_NOT Expression .

    $default  reduce using rule 55 (Expression)


State 81

   63 Expression: T_NEW T_IDENTIFIER .
   64           | T_NEW T_IDENTIFIER . T_OPENPAREN Arg T_CLOSEPAREN

    T_OPENPAREN  shift, and go to state 101

    $default  reduce using rule 63 (Expression)

